--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<video src="download.mp4" controls=false autoplay loop></video>
+<style>
+.container {
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+</style>
+
+<body class="container">
+  <div class="vertical-center">
+<center>
+    <video src="download.mp4" controls=false autoplay loop></video></center>
+  </div>
+</body>
