--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <style>
-.container {
-  height: 200px;
-  position: relative;
-  border: 3px solid green;
-}
-
-.vertical-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+.center {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 </style>
 
 <body class="container">
-  <div class="vertical-center">
+  <div class="center">
 <center>
     <video src="download.mp4" controls=false autoplay loop></video></center>
   </div>
