--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body class="container">
   <div class="center">
 <center>
-    <video src="download.mp4" autoplay loop></video></center>
+    <video src="download.mp4" controls autoplay loop></video></center>
   </div>
 </body>
